2008-10-21  Ben Abbott  <bpabbott@mac.com>

	* plot/clf.m: Improve Matlab compatibility.

2008-10-21  John W. Eaton  <jwe@octave.org>

	* plot/gnuplot_drawnow.m: Pass handle to __go_draw_figure__, not
	struct.  Use get instead of examining struct fields directly.
	* plot/__go_draw_figure__.m: First arg is now handle, not figure
	object struct.  Use get instead of examining struct elements
	directly.  Use allhild instead of looking at children field of
	figure object struct.

2008-10-20  Ben Abbott  <bpabbott@mac.com>

	* plot/orient.m: Fix syntax error.

2008-10-20  David Bateman  <dbateman@free.fr>

	* testfun/rundemos.m: Pause between files, as demo itself doesn't.
	
	* plot/fill.m, plot/quiver.m: Quiet the demos.
	* plot/stair.m: Treat a line style argument correctly.

2008-10-20  John W. Eaton  <jwe@octave.org>

	* plot/surfnorm.m: Save and restore hold state.
	From Daniel J. Sebald <daniel.sebald@ieee.org> and
	Ben Abbott <bpabbott@mac.com>.

2008-10-20  Ben Abbott  <bpabbott@mac.com>

	* plot/closereq.m: Respect property tag.

	* plot/__stem__.m: Respect new ordering of children when setting
	baseline.

	* plot/orient.m, plot/print.m: Properly validate figure handle.

	* plot/hold.m, plot/comet.m: Properly validate axes handle.

	* plot/__go_draw_axes__.m: Fix for binary xfer of suface plots.

2008-10-20  David Bateman  <dbateman@free.fr>

	* plot/plotyy.m: Test that an axes handle actually is one before
	setting it.

2008-10-17  David Bateman  <dbateman@free.fr>

	* plot/__plt_get_axis_arg__.m: Exclude non-numeric and root figure
	from potential axis handles.
	* plot/colorbar.m: Remove debug output.
	* plot/comet.m: Close plot before demo
	* plot/contourc.m: No output if nargout == 0.

2008-10-16  David Bateman  <dbateman@free.fr>

	* plot/subplot.m: Allow for column vector of children for figure.

2008-10-16  John W. Eaton  <jwe@octave.org>

	* testfun/rundemos.m: New function.

2008-10-16  Ben Abbott  <bpabbott@mac.com>
