@@ -4,6 +4,8 @@
 
 2008-10-21  John W. Eaton  <jwe@octave.org>
 
+	* plot/newplot.m: Delete stray debugging code.
+
 	* plot/gnuplot_drawnow.m: Pass handle to __go_draw_figure__, not
 	struct.  Use get instead of examining struct fields directly.
 	* plot/__go_draw_figure__.m: First arg is now handle, not figure
